# weeknote-bot

./: .env.dev  .flake8  .gitignore  .pre-commit-config.yaml  .tox.ini  README.md  config_example.json  makefile  pyproject.toml
weeknotebot/: cli.py  config_manager.py  generator.py
weeknotebot/sources/: anilist_stats.py  feed.py
